Bug 151697 - XmlFilterAdaptor: the status indicator string "Loading :" and "Saving :" are hardcoded and not localizable
Summary: XmlFilterAdaptor: the status indicator string "Loading :" and "Saving :" are ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.3.6.2 release
Hardware: All All
: medium trivial
Assignee: Kevin Suo
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-22 01:53 UTC by Kevin Suo
Modified: 2022-10-23 19:09 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2022-10-22 01:53:50 UTC
Steps to Reproduce:
1. New Draw in a non-English UI.
2. Open a PDF file, and note the status bar.

Current Result:
The string "Loading :" is in English. There is no such string on weblate for localization.

Expected:
This string should be localizable.

Reproduced on 7.3.6 version, and also on 7.4 and master.

This seems to be in: XmlFilterAdaptor::importImpl
https://opengrok.libreoffice.org/xref/core/filter/source/xmlfilteradaptor/XmlFilterAdaptor.cxx?r=91ba9654#70

where this string is hardcoded:
    xStatusIndicator->start( "Loading :", 4);
Comment 2 Commit Notification 2022-10-23 15:57:15 UTC
Kevin Suo committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a97bae545d72d8b19f39aa9280c0f284c79d0f6c

tdf#151697: Use localized string for "Loading" and "Saving" in status bar

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.