tdf#151697: Use localized string for "Loading" and "Saving" in status bar

Change-Id: I51967950839e7384e8f31178a70bd944d6f9059c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141662
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>