filter/Library_xmlfa.mk
@@ -25,6 +25,11 @@ $(eval $(call gb_Library_use_external,xmlfa,boost_headers))
 
 $(eval $(call gb_Library_use_sdk_api,xmlfa))
 
+$(eval $(call gb_Library_set_include,xmlfa,\
+	$$(INCLUDE) \
+	-I$(SRCDIR)/filter/inc \
+))
+
 $(eval $(call gb_Library_use_libraries,xmlfa,\
 	comphelper \
 	cppuhelper \
